--- a/Workout/res/values/strings.xml
+++ b/Workout/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
 
+    <string name="splash">Splash</string>
     <string name="app_name">Workout</string>
     <string name="title_section3">Section 3</string>
     <string name="title_section2">Section 2</string>
