--- a/Workout/res/values/strings.xml
+++ b/Workout/res/values/strings.xml
@@ -6,7 +6,8 @@
     <string name="title_section2">Home</string>
     <string name="title_section1">Log workout</string>
     <string name="hello_world">Hello world!</string>
-    <string name="menu_settings">Settings</string>
+    <string name="str_menu_settings">Settings</string>
+    <string name="str_menu_music">Music</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="title_activity_guide">GuideActivity</string>
     <string name="title_activity_log">LogActivity</string>
