Added navigation to all activites - activity_guide.xml, activity_main.xml, activity_settings.xml in /res/menu -- Added an item for each actionbar setting
- strings.xml
-- Changed the name of the title string for SettingsActivity.java, this was named LogActivity for some reason

- GuideActivity.java, MainActivity.java, SettingsActivity.java
-- Changed from switch to if-statements since there are no else in this scenario, I'm dumb etc

- You can easily add or remove actionbar items by editing xml from res/menu and the onOptionsItemSelected function in the respected class.

--- a/Workout/res/values/strings.xml
+++ b/Workout/res/values/strings.xml
@@ -19,6 +19,7 @@
     <!-- ACTION BAR / MENU -->
     <string name="str_menu_settings">Settings</string>
     <string name="str_menu_music">Music</string>
+    <string name="str_menu_guide">Guide</string>
     
     <!-- MAIN ACTIVITY -->
     <string name="tv_welcomeMessage">Welcome to Strongbird! This app will help you keep track of your stronglifts workout.</string>
