--- a/Workout/res/values/strings.xml
+++ b/Workout/res/values/strings.xml
@@ -22,6 +22,7 @@
     <string name="str_menu_settings">Settings</string>
     <string name="str_menu_music">Music</string>
     <string name="str_menu_guide">Guide</string>
+    <string name="str_menu_help">Help</string>
     
     <!-- MAIN ACTIVITY -->
     <string name="tv_welcomeMessage">Welcome to Strongbird! This app will help you keep track of your stronglifts workout.</string>
@@ -31,5 +32,9 @@
     <!-- SETTINGS ACTIVITY -->
     
     <!-- GUIDE ACTIVITY -->
+    
+    <!-- HELP DIALOG -->
+    <string name="dialog_close">Close</string>
+    <string name="dialog_help">Generic help message</string>
     
 </resources>
