--- a/Workout/res/values/strings.xml
+++ b/Workout/res/values/strings.xml
@@ -35,6 +35,8 @@
     
     <!-- HELP DIALOG -->
     <string name="dialog_close">Close</string>
-    <string name="dialog_help">Generic help message</string>
-    
+    <string name="dialog_help0">This is where you log your workout. This message needs to be changed</string>
+    <string name="dialog_help1">This is the homepage. This message needs to be changed</string>
+    <string name="dialog_help2">This is where you view statistics. This message needs to be changed</string>
+    <string name="dialog_help3">This is the gallery. This message needs to be changed</string>
 </resources>
