--- a/Workout/res/values/strings.xml
+++ b/Workout/res/values/strings.xml
@@ -32,8 +32,9 @@
     
     <!-- SETTINGS ACTIVITY -->
     <string name="set_main">Settings</string>
-    <string name="set_weight">Weight should be displayed in:</string>
-    <string name="set_reset">Reset data</string>
+    <string name="set_unitMeasure">Units of measurement</string>
+    <string name="set_kgLbs">KG or LBS</string>
+    <string name="set_kgLbs_summary">Choose which unit of measurement to display weight in</string>
     <string name="set_done">Done</string>
     <string name="set_saved">Settings saved!</string>
 
